--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,7 +36,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Password Manager</title>
+    <title>VaultWarden</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
